Integrate GridOpsAgent knowledge workflow and report deck